--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "SocketRocket"]
 	path = Submodules/SocketRocket
-	url = git@github.com:utahiosmac/SocketRocket.git
+	url = git@github.com:square/SocketRocket.git
