Fixing syntax errors. Adding Jobs

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "SocketRocket"]
 	path = Submodules/SocketRocket
 	url = git@github.com:square/SocketRocket.git
+[submodule "Jobs"]
+	path = Submodules/Jobs
+	url = git@github.com:utahiosmac/jobs.git
